# blob-extractor

./: .gitignore  CMakeLists.txt  analyst.cpp  analyst.hpp  analyst.tmproj  common.hpp  crawler.cpp  crawler.hpp  extract_movements.py  extractor.tmproj  logger.hpp  main.cpp  output.py  types.hpp  utilities.cpp  utilities.hpp
modules/: FindBOOST.cmake  FindFFMPEG.cmake  FindGRAPHICSMAGICK.cmake  LibFindMacros.cmake
